# tree-sitter-simple

./: .gitignore  .gitmodules  .hiedb  README.md  cabal.project  justfile
.github/workflows/: haskell-ci.yml
.zed/: settings.json
haskell-ast/: haskell-ast.cabal  package.yaml
haskell-ast/app/: Main.hs
haskell-ast/src/AST/: Haskell.hs
haskell-ast/src/AST/Haskell/: Generated.hs
haskell-ast/test/: Main.hs
hpack-common/: defaults.yaml
text-range/: package.yaml  text-range.cabal
text-range/src/Data/: LineCol.hs  LineColRange.hs  Pos.hs  Range.hs
tree-sitter-ast/: CHANGELOG.md  LICENSE  package.yaml  tree-sitter-ast.cabal
tree-sitter-ast/app/: Main.hs
tree-sitter-ast/src/: AST.hs
tree-sitter-ast/src/AST/: Cast.hs  Err.hs  Node.hs  NodeTypes.hs  Range.hs  Runtime.hs  Sum.hs  SumTH.hs  Symbol.hs  Token.hs  Traversal.hs  Unwrap.hs
tree-sitter-ast/src/Data/: Sum.hs
tree-sitter-ast/test/: Main.hs  ParseSpec.hs  SumSpec.hs
tree-sitter-haskell/: package.yaml  tree-sitter-haskell.cabal
tree-sitter-haskell/TreeSitter/: Haskell.hs
tree-sitter-haskell/app/: Main.hs
tree-sitter-haskell/src/TreeSitter/: Haskell.hs
tree-sitter-haskell/test/: Main.hs
tree-sitter-haskell/test_data/: Data.hs  Data2.hs  Error.hs  First.hs  Invalid.hs  Missing.hs
tree-sitter-simple/: package.yaml  tree-sitter-simple.cabal
tree-sitter-simple/src/: bridge.c
tree-sitter-simple/src/TreeSitter/: Api.hs  Query.hs  Raw.hs
tree-sitter-simple/src/TreeSitter/Raw/: Language.hs  Node.hs  Parser.hs  Symbol.hs  Tree.hs
