cabal-version:      3.4
name:               haskell-ast
version:            0.1.0.0
license:            MIT
author:             Brian Shu
maintainer:         littlebubu.shu@gmail.com
build-type:         Simple

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        FlexibleInstances,
        FlexibleContexts,
        InstanceSigs,
        MultiParamTypeClasses,
        ConstraintKinds,
        LambdaCase,
        EmptyCase,
        TupleSections,
        BangPatterns,
        TypeApplications,
        StandaloneDeriving,
        OverloadedStrings,
        RankNTypes,
        ScopedTypeVariables,
        NamedFieldPuns,
        DuplicateRecordFields,
        DataKinds,
        ConstraintKinds,
        TypeApplications,
        KindSignatures,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DeriveDataTypeable,
        DeriveLift,
        DeriveTraversable ,
        GeneralizedNewtypeDeriving,
        GADTs,
        PolyKinds,
        ViewPatterns,
        PatternSynonyms,
        TypeFamilies,
        TypeFamilyDependencies,
        FunctionalDependencies,
        ExistentialQuantification,
        TypeOperators,
    build-depends:
        base >=4.17.2.1,
        text,
        bytestring,
        containers,
        unordered-containers,
        tree-sitter-haskell,
        tree-sitter-simple,
        tree-sitter-ast,
        deepseq,

library
    import:           common
    exposed-modules:
        AST.Haskell,
        AST.Haskell.Generated
    hs-source-dirs:   src
    default-language: GHC2021

executable parse
  import: common
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , text >= 2.0 && < 2.2
    , haskell-ast
    , tree-sitter-simple
    , tree-sitter-haskell
    , pretty-simple
    , neat-interpolation
    
test-suite haskell-ast-test
    import:           common
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
    build-depends:
        haskell-ast,
        directory,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        neat-interpolation,
        tasty-expect,
        pretty-simple,
