cabal-version:      3.4
name:               tree-sitter-ast
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Brian Shu
maintainer:         littlebubu.shu@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        FlexibleInstances,
        FlexibleContexts,
        InstanceSigs,
        MultiParamTypeClasses,
        ConstraintKinds,
        LambdaCase,
        EmptyCase,
        TupleSections,
        BangPatterns,
        TypeApplications,
        StandaloneDeriving,
        OverloadedStrings,
        RankNTypes,
        ScopedTypeVariables,
        NamedFieldPuns,
        DuplicateRecordFields,
        DataKinds,
        ConstraintKinds,
        TypeApplications,
        KindSignatures,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DeriveDataTypeable,
        DeriveLift,
        DeriveTraversable ,
        GeneralizedNewtypeDeriving,
        GADTs,
        PolyKinds,
        ViewPatterns,
        PatternSynonyms,
        TypeFamilies,
        TypeFamilyDependencies,
        FunctionalDependencies,
        ExistentialQuantification,
        TypeOperators,
    build-depends:
        base ^>=4.17.2.1,
        text,
        bytestring,
        containers,
        unordered-containers,
        aeson,
        tree-sitter-simple,
        transformers,
        mtl,
        split,

library
    import:           common
    exposed-modules:
        Data.Sum
        AST.NodeTypes
        AST.Node
        AST.Token
        AST.Cast
        AST.Symbol
        AST.Runtime
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2021

executable gen-ast
    import:           common
    main-is:          Main.hs
    build-depends:
        tree-sitter-ast,
        neat-interpolation,
        pretty-simple,
        process,
    hs-source-dirs:   app

test-suite tree-sitter-ast-test
    import:           common
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        SumSpec
    build-depends:
        tree-sitter-ast,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
